tests/NormalTests/paczka1/fuzzy1/88439623.err
Error in line 5: TgASR4b S452 40,0
Error in line 4: 4KW1 S418 82,5
Error in line 6: TgASR4b S337 44,1
Error in line 10: TgASR4b S452 73,4
Error in line 2: H8xUv S337 58,8
Error in line 12: TgASR4b S337 65,3
Error in line 23: H8xUv S337 6,5
Error in line 31: AJY3vjxay S418 51,7
